# open5gs

configs/: sample.yaml.in
lib/app/: .ogs-app.h.swp  .ogs-context.h.swp  ogs-app.h  ogs-config.h
lib/core/: .ogs-fsm.c.swp  .ogs-queue.c.swp  .ogs-thread.c.swp  .ogs-thread.h.swp  .ogs-udp.c.swp
lib/dbi/: .application.c.swp  .subscription.c.swp  application.c  application.h  meson.build  ogs-dbi.h  ogs-mongoc.c  ogs-mongoc.h
lib/proto/: .types.h.swp  types.h
lib/sbi/: .message.c.swn  .message.c.swo  .message.c.swp  .message.h.swo  .message.h.swp  .path.c.swp  .types.c.swp  message.c  message.h  ogs-sbi.h
lib/sbi/openapi/: meson.build
lib/sbi/openapi/model/: .notification_push.h.swp  .pfd_content.c.swp  .pfd_data_for_app.c.swp  .pfd_data_for_app.h.swp  .pfd_data_for_app_ext.c.swp  .pfd_subscription.c.swp  .pfd_subscription.h.swo  .plmn_id.h.swp  1  (+13 more)
src/: .main.c.swp  meson.build
src/amf/: .amf-sm.c.swp  .namf-handler.c.swp  .nnrf-handler.c.swp  amf-sm.c
src/nef/: .app.c.swp  .context.c.swp  .init.c.swp  .meson.build.swp  .nef-sm.c.swp  .nnef-handler.c.swo  .nnef-handler.c.swp  .sbi-path.c.swp  .sbi-path.h.swp  1  app.c  context.c  context.h  event.c  event.h  init.c  meson.build  nef-sm.c  nef-sm.h  nnef-handler.c  nnef-handler.h  sbi-path.c  sbi-path.h
src/smf/: .nnef-build.c.swp  .smf-sm.c.swp  nnef-build.c  nnef-build.h
src/udm/: .nnrf-handler.c.swp  .nudm-handler.c.swo  .nudm-handler.c.swp  .sbi-path.c.swp  .udm-sm.c.swp
src/udr/: .nudr-handler.c.swo  .nudr-handler.c.swp  nudr-handler.c  nudr-handler.h  udr-sm.c
tests/app/: 5gc-init.c
